--- a/faq.html
+++ b/faq.html
@@ -444,10 +444,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="main.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
             <li><a href="services.html"><i class="fas fa-cogs"></i> خدمات ما</a></li>
-            <li><a href="pricing.html"><i class="fas fa-tags"></i> نرخ‌نامه</a></li>
-            <li><a href="index.html"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
+            <li><a href="pricing.html"><i class="fas fa-tags"></i> خدمات ریمپ</a></li>
+            <li><a href="calculation.html"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
             <li><a href="faq.html" class="active"><i class="fas fa-question-circle"></i> سوالات متداول</a></li>
         </ul>
     </nav>
@@ -608,7 +608,7 @@
 <footer>
     <div class="footer-links">
         <a href="services.html">خدمات ما</a>
-        <a href="pricing.html">نرخ‌نامه</a>
+        <a href="pricing.html">خدمات ریمپ</a>
         <a href="calculator.html">ماشین حساب</a>
         <a href="contact.html">تماس با ما</a>
     </div>
