--- a/pricing.html
+++ b/pricing.html
@@ -544,10 +544,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="main.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
             <li><a href="services.html"><i class="fas fa-cogs"></i> خدمات ما</a></li>
             <li><a href="pricing.html" class="active"><i class="fas fa-tags"></i> خدمات ریمپ</a></li>
-            <li><a href="index.html"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
+            <li><a href="calculation.html"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
             <li><a href="faq.html"><i class="fas fa-question-circle"></i> سوالات متداول</a></li>
         </ul>
     </nav>
