--- a/required trim.html
+++ b/required trim.html
@@ -4,58 +4,215 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محاسبه مقدار کفتراشی مورد نیاز</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="icon.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #4b6cb7;
-            --secondary-color: #182848;
-            --accent-color: #ffc107;
-            --text-color: #2c3e50;
-            --light-bg: #f5f7fa;
-            --card-bg: #ffffff;
-            --error-color: #e74c3c;
-            --success-color: #2ecc71;
+            --primary-blue: #4b6cb7;
+            --dark-blue: #182848;
+            --accent-yellow: #ffc107;
+            --light-gray: #f5f7fa;
+            --medium-gray: #c3cfe2;
+            --text-dark: #343a40;
+            --text-light: #f8f9fa;
+            --border-gray: #e9ecef;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, var(--light-bg) 0%, #c3cfe2 100%);
-            margin: 0;
-            padding: 0;
+            background: linear-gradient(135deg, var(--light-gray) 0%, var(--medium-gray) 100%);
+            color: var(--text-dark);
+            line-height: 1.6;
             min-height: 100vh;
-            color: var(--text-color);
         }
 
+        /* هدر و ناوبری */
+        header {
+            background: linear-gradient(to right, var(--primary-blue), var(--dark-blue));
+            color: white;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            border-bottom: 5px solid var(--accent-yellow);
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 5%;
+            max-width: 1200px;
+            margin: 0 auto;
+            position: relative;
+        }
+
+        .logo {
+            display: flex;
+            align-items: center;
+            z-index: 1001;
+        }
+
+        .logo img {
+            height: 40px;
+            margin-left: 10px;
+        }
+
+        .logo h1 {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: white;
+        }
+
+        .logo span {
+            color: var(--accent-yellow);
+        }
+
+        .nav-links {
+            display: flex;
+            list-style: none;
+            transition: all 0.4s ease-in-out;
+        }
+
+        .nav-links li {
+            margin-right: 1.8rem;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            padding: 0.5rem 0;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+
+        .nav-links a:hover {
+            color: var(--accent-yellow);
+        }
+
+        .nav-links a i {
+            margin-left: 8px;
+            font-size: 0.9rem;
+        }
+
+        .active {
+            color: var(--accent-yellow) !important;
+        }
+
+        .active::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 3px;
+            background-color: var(--accent-yellow);
+        }
+
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            width: 30px;
+            height: 25px;
+            flex-direction: column;
+            justify-content: space-between;
+            z-index: 1001;
+        }
+
+        .hamburger span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: white;
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+
+        .hamburger.active span:nth-child(1) {
+            transform: translateY(11px) rotate(45deg);
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            transform: translateY(-11px) rotate(-45deg);
+        }
+
+        @media (max-width: 992px) {
+            .hamburger {
+                display: flex;
+            }
+
+            .nav-links {
+                position: fixed;
+                top: 0;
+                right: -100%;
+                width: 80%;
+                max-width: 300px;
+                height: 100vh;
+                background: linear-gradient(to bottom, var(--primary-blue), var(--dark-blue));
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 80px 30px 30px;
+                box-shadow: -5px 0 15px rgba(0, 0, 0, 0.2);
+                z-index: 1000;
+            }
+
+            .nav-links.active {
+                right: 0;
+            }
+
+            .nav-links li {
+                margin: 1rem 0;
+                width: 100%;
+            }
+
+            .nav-links a {
+                padding: 0.8rem;
+                width: 100%;
+                border-radius: 5px;
+            }
+
+            .nav-links a:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+
+            .active::after {
+                display: none;
+            }
+
+            .active {
+                background-color: rgba(255, 193, 7, 0.2) !important;
+            }
+        }
+
+        /* استایل‌های ماشین حساب */
         .container {
             width: 90%;
             max-width: 800px;
             margin: 30px auto;
-            background-color: var(--card-bg);
+            background-color: white;
             border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
             overflow: hidden;
-            padding-bottom: 20px;
+            transform: translateY(0);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
-        header {
-            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 5px solid var(--accent-color);
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 28px;
-            font-weight: 700;
-        }
-
-        .subtitle {
-            font-size: 16px;
-            opacity: 0.9;
-            margin-top: 5px;
+        .container:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
         }
 
         .form-container {
@@ -71,7 +228,7 @@
             display: block;
             margin-bottom: 8px;
             font-weight: 600;
-            color: var(--text-color);
+            color: var(--text-dark);
         }
 
         input {
@@ -85,13 +242,13 @@
         }
 
         input:focus {
-            border-color: var(--primary-color);
+            border-color: var(--primary-blue);
             outline: none;
             box-shadow: 0 0 0 3px rgba(75, 108, 183, 0.2);
         }
 
         button {
-            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+            background: linear-gradient(to right, var(--primary-blue), var(--dark-blue));
             color: white;
             border: none;
             padding: 12px 25px;
@@ -126,13 +283,13 @@
         .result-value {
             font-size: 24px;
             font-weight: bold;
-            color: var(--primary-color);
+            color: var(--primary-blue);
             text-align: center;
             margin: 20px 0;
             padding: 15px;
             background-color: rgba(75, 108, 183, 0.1);
             border-radius: 8px;
-            border-right: 4px solid var(--primary-color);
+            border-right: 4px solid var(--primary-blue);
         }
 
         .error {
@@ -183,23 +340,67 @@
         }
 
         .input-icon i {
-
             left: 15px;
             top: 50%;
-            color: var(--primary-color);
+            color: var(--primary-blue);
         }
 
         .input-icon input {
             padding-left: 40px;
         }
 
+        /* فوتر */
         footer {
             text-align: center;
-            padding: 15px;
+            padding: 1.5rem;
             color: #6c757d;
-            font-size: 14px;
-            border-top: 1px solid #eee;
-            margin-top: 20px;
+            font-size: 0.9rem;
+            border-top: 1px solid var(--border-gray);
+            background-color: white;
+        }
+
+        .footer-links {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .footer-links a {
+            color: var(--primary-blue);
+            margin: 0 1rem;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: var(--dark-blue);
+            text-decoration: underline;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            margin: 1rem 0;
+        }
+
+        .social-links a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 36px;
+            height: 36px;
+            background-color: var(--light-gray);
+            border-radius: 50%;
+            margin: 0 0.5rem;
+            color: var(--primary-blue);
+            transition: all 0.3s ease;
+        }
+
+        .social-links a:hover {
+            background-color: var(--primary-blue);
+            color: white;
+            transform: translateY(-3px);
         }
 
         @keyframes fadeIn {
@@ -212,10 +413,6 @@
                 width: 95%;
             }
 
-            h1 {
-                font-size: 24px;
-            }
-
             button {
                 width: 100%;
             }
@@ -223,12 +420,31 @@
     </style>
 </head>
 <body>
-<div class="container">
-    <header>
-        <h1>محاسبه مقدار کفتراشی مورد نیاز</h1>
-        <div class="subtitle">محاسبات تخصصی تنظیم موتور</div>
-    </header>
+<!-- هدر و ناوبری -->
+<header>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="logo2.png" alt="لوگوی ریمپ سهند">
+            <h1>ریمپ <span>سهند</span></h1>
+        </div>
 
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
+        <ul class="nav-links">
+            <li><a href="index.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
+            <li><a href="services.html"><i class="fas fa-cogs"></i> خدمات ما</a></li>
+            <li><a href="pricing.html"><i class="fas fa-tags"></i> خدمات ریمپ</a></li>
+            <li><a href="calculation.html" class="active"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
+            <li><a href="faq.html"><i class="fas fa-question-circle"></i> سوالات متداول</a></li>
+        </ul>
+    </nav>
+</header>
+
+<div class="container">
     <div class="form-container">
         <div class="form-group input-icon">
             <label for="bore">قطر سیلندر (میلی‌متر)</label>
@@ -273,28 +489,26 @@
             </div>
         </div>
 
-      <div id="pressureFields" class="hidden">
-    <div class="form-group input-icon">
-        <i class="fas fa-tachometer-alt"></i>
-        <label for="currentPressure">فشار کمپرس فعلی (psi)</label>
-        <input type="number" id="currentPressure" step="0.1" placeholder="مثال: 180">
-        <div id="currentPressureError" class="error hidden"><i class="fas fa-exclamation-circle"></i> لطفاً مقدار معتبر وارد کنید</div>
-    </div>
+        <div id="pressureFields" class="hidden">
+            <div class="form-group input-icon">
+                <label for="currentPressure">فشار کمپرس فعلی (psi)</label>
+                <input type="number" id="currentPressure" step="0.1" placeholder="مثال: 180">
+                <div id="currentPressureError" class="error hidden"><i class="fas fa-exclamation-circle"></i> لطفاً مقدار معتبر وارد کنید</div>
+            </div>
 
-    <div class="form-group input-icon">
-        <i class="fas fa-tachometer-alt"></i>
-        <label for="targetPressure">فشار کمپرس مورد نظر (psi)</label>
-        <input type="number" id="targetPressure" step="0.1" placeholder="مثال: 200">
-        <div id="targetPressureError" class="error hidden"><i class="fas fa-exclamation-circle"></i> فشار جدید باید بیشتر از فعلی باشد</div>
-    </div>
-</div>
+            <div class="form-group input-icon">
+                <label for="targetPressure">فشار کمپرس مورد نظر (psi)</label>
+                <input type="number" id="targetPressure" step="0.1" placeholder="مثال: 200">
+                <div id="targetPressureError" class="error hidden"><i class="fas fa-exclamation-circle"></i> فشار جدید باید بیشتر از فعلی باشد</div>
+            </div>
+        </div>
 
         <button onclick="calculateRequiredShaving()">
             <i class="fas fa-calculator"></i> محاسبه
         </button>
 
         <div class="results" id="results">
-            <h3 style="text-align: center; color: var(--secondary-color);">نتایج محاسبات</h3>
+            <h3 style="text-align: center; color: var(--dark-blue);">نتایج محاسبات</h3>
             <div class="result-value">
                 مقدار کفتراشی مورد نیاز: <span id="requiredShaving">0</span> میلی‌متر
             </div>
@@ -303,13 +517,51 @@
             </div>
         </div>
     </div>
-
-    <footer>
-        طراحی شده توسط تیم فنی سهند © ۱۴۰۲
-    </footer>
 </div>
 
+<footer>
+    <div class="footer-links">
+        <a href="services.html">خدمات ما</a>
+        <a href="pricing.html">خدمات ریمپ</a>
+        <a href="calculator.html">ماشین حساب</a>
+        <a href="contact.html">تماس با ما</a>
+    </div>
+
+    <div class="social-links">
+        <a href="https://www.instagram.com/remapsahand/"><i class="fab fa-instagram"></i></a>
+        <a href="https://t.me/pkhtami"><i class="fab fa-telegram"></i></a>
+        <a href="https://api.whatsapp.com/send/?phone=989308139944&text&app_absent=0"><i class="fab fa-whatsapp"></i></a>
+        <a href="tel:+989308139944"><i class="fa-solid fa-phone"></i></a>
+        <a href="https://www.google.com/maps?q=37.9286925311032,46.12345242158474"><i class="fa-solid fa-location-dot"></i></a>
+    </div>
+
+    <p>طراحی شده توسط تیم فنی سهند © ۱۴۰۲</p>
+</footer>
+
 <script>
+    // اسکریپت برای منوی همبرگر
+    const hamburger = document.querySelector('.hamburger');
+    const navLinks = document.querySelector('.nav-links');
+
+    hamburger.addEventListener('click', () => {
+        hamburger.classList.toggle('active');
+        navLinks.classList.toggle('active');
+
+        if (navLinks.classList.contains('active')) {
+            document.body.style.overflow = 'hidden';
+        } else {
+            document.body.style.overflow = 'auto';
+        }
+    });
+
+    document.querySelectorAll('.nav-links a').forEach(link => {
+        link.addEventListener('click', () => {
+            hamburger.classList.remove('active');
+            navLinks.classList.remove('active');
+            document.body.style.overflow = 'auto';
+        });
+    });
+
     function toggleFields() {
         const crOption = document.getElementById('optionCR').checked;
         document.getElementById('crFields').style.display = crOption ? 'block' : 'none';
