--- a/tire calc.html
+++ b/tire calc.html
@@ -5,31 +5,165 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>محاسبه ابعاد تایر</title>
     <link rel="icon" href="icon.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary-color: #4b6cb7;
-            --secondary-color: #182848;
-            --accent-color: #ffc107;
+            --primary-blue: #4b6cb7;
+            --dark-blue: #182848;
+            --accent-yellow: #ffc107;
+            --light-gray: #f5f7fa;
+            --medium-gray: #c3cfe2;
             --text-dark: #343a40;
             --text-light: #f8f9fa;
+            --border-gray: #e9ecef;
             --bg-gradient: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: var(--bg-gradient);
-            margin: 0;
-            padding: 0;
+            background: linear-gradient(135deg, var(--light-gray) 0%, var(--medium-gray) 100%);
+            color: var(--text-dark);
+            line-height: 1.6;
             min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* هدر و ناوبری */
+        header {
+            background: linear-gradient(to right, var(--primary-blue), var(--dark-blue));
+            color: white;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            border-bottom: 5px solid var(--accent-yellow);
+        }
+
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 5%;
+            max-width: 1200px;
+            margin: 0 auto;
+            position: relative;
+        }
+
+        .logo {
+            display: flex;
+            align-items: center;
+            z-index: 1001;
+        }
+
+        .logo img {
+            height: 40px;
+            margin-left: 10px;
+        }
+
+        .logo h1 {
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: white;
+        }
+
+        .logo span {
+            color: var(--accent-yellow);
+        }
+
+        .nav-links {
+            display: flex;
+            list-style: none;
+            transition: all 0.4s ease-in-out;
+        }
+
+        .nav-links li {
+            margin-right: 1.8rem;
+        }
+
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            padding: 0.5rem 0;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            position: relative;
+        }
+
+        .nav-links a:hover {
+            color: var(--accent-yellow);
+        }
+
+        .nav-links a i {
+            margin-left: 8px;
+            font-size: 0.9rem;
+        }
+
+        .active {
+            color: var(--accent-yellow) !important;
+        }
+
+        .active::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 3px;
+            background-color: var(--accent-yellow);
+        }
+
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            width: 30px;
+            height: 25px;
+            flex-direction: column;
+            justify-content: space-between;
+            z-index: 1001;
+        }
+
+        .hamburger span {
+            display: block;
+            height: 3px;
+            width: 100%;
+            background-color: white;
+            border-radius: 3px;
+            transition: all 0.3s ease;
+        }
+
+        .hamburger.active span:nth-child(1) {
+            transform: translateY(11px) rotate(45deg);
+        }
+
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
+        }
+
+        .hamburger.active span:nth-child(3) {
+            transform: translateY(-11px) rotate(-45deg);
+        }
+
+        /* استایل‌های ماشین حساب */
+        .calculator-container {
+            flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
+            padding: 2rem 0;
         }
 
         .container {
             width: 90%;
             max-width: 600px;
-            margin: 30px auto;
             background-color: white;
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
@@ -41,20 +175,6 @@
         .container:hover {
             transform: translateY(-5px);
             box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
-        }
-
-        header {
-            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 5px solid var(--accent-color);
-        }
-
-        h1 {
-            margin: 0;
-            font-size: 24px;
-            font-weight: 700;
         }
 
         .content {
@@ -83,13 +203,13 @@
         }
 
         input:focus {
-            border-color: var(--primary-color);
+            border-color: var(--primary-blue);
             box-shadow: 0 0 0 3px rgba(75, 108, 183, 0.2);
             outline: none;
         }
 
         button {
-            background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+            background: linear-gradient(to right, var(--primary-blue), var(--dark-blue));
             color: white;
             border: none;
             padding: 14px;
@@ -115,17 +235,17 @@
         .result {
             margin-top: 25px;
             padding: 20px;
-            background-color: #f8f9fa;
+            background-color: var(--light-gray);
             border-radius: 10px;
             display: none;
             animation: fadeIn 0.5s ease forwards;
-            border-right: 4px solid var(--primary-color);
+            border-right: 4px solid var(--primary-blue);
         }
 
         .result-item {
             margin-bottom: 15px;
             padding-bottom: 15px;
-            border-bottom: 1px solid #e9ecef;
+            border-bottom: 1px solid var(--border-gray);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -138,7 +258,7 @@
         }
 
         .result-item strong {
-            color: var(--primary-color);
+            color: var(--primary-blue);
         }
 
         .result-item span {
@@ -146,12 +266,58 @@
             color: var(--text-dark);
         }
 
+        /* فوتر */
         footer {
             text-align: center;
-            padding: 15px;
+            padding: 1.5rem;
             color: #6c757d;
-            font-size: 14px;
-            border-top: 1px solid #eee;
+            font-size: 0.9rem;
+            border-top: 1px solid var(--border-gray);
+            background-color: white;
+        }
+
+        .footer-links {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .footer-links a {
+            color: var(--primary-blue);
+            margin: 0 1rem;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: var(--dark-blue);
+            text-decoration: underline;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            margin: 1rem 0;
+        }
+
+        .social-links a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 36px;
+            height: 36px;
+            background-color: var(--light-gray);
+            border-radius: 50%;
+            margin: 0 0.5rem;
+            color: var(--primary-blue);
+            transition: all 0.3s ease;
+        }
+
+        .social-links a:hover {
+            background-color: var(--primary-blue);
+            color: white;
+            transform: translateY(-3px);
         }
 
         @keyframes fadeIn {
@@ -159,114 +325,210 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
+        @media (max-width: 992px) {
+            .hamburger {
+                display: flex;
+            }
+
+            .nav-links {
+                position: fixed;
+                top: 0;
+                right: -100%;
+                width: 80%;
+                max-width: 300px;
+                height: 100vh;
+                background: linear-gradient(to bottom, var(--primary-blue), var(--dark-blue));
+                flex-direction: column;
+                align-items: flex-start;
+                padding: 80px 30px 30px;
+                box-shadow: -5px 0 15px rgba(0, 0, 0, 0.2);
+                z-index: 1000;
+            }
+
+            .nav-links.active {
+                right: 0;
+            }
+
+            .nav-links li {
+                margin: 1rem 0;
+                width: 100%;
+            }
+
+            .nav-links a {
+                padding: 0.8rem;
+                width: 100%;
+                border-radius: 5px;
+            }
+
+            .nav-links a:hover {
+                background-color: rgba(255, 255, 255, 0.1);
+            }
+
+            .active::after {
+                display: none;
+            }
+
+            .active {
+                background-color: rgba(255, 193, 7, 0.2) !important;
+            }
+        }
+
         @media (max-width: 768px) {
             .container {
                 width: 95%;
             }
-
-            h1 {
-                font-size: 20px;
-            }
         }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<div class="container">
     <header>
-        <h1>محاسبه ابعاد تایر</h1>
-        <div class="subtitle">محاسبات تخصصی</div>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="logo2.png" alt="لوگوی ریمپ سهند">
+                <h1>ریمپ <span>سهند</span></h1>
+            </div>
+
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="index.html"><i class="fas fa-home"></i> صفحه اصلی</a></li>
+                <li><a href="services.html"><i class="fas fa-cogs"></i> خدمات ما</a></li>
+                <li><a href="pricing.html"><i class="fas fa-tags"></i> خدمات ریمپ</a></li>
+                <li><a href="calculation.html" class="active"><i class="fas fa-calculator"></i> ماشین حساب</a></li>
+                <li><a href="faq.html"><i class="fas fa-question-circle"></i> سوالات متداول</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="content">
-        <div class="form-group">
-            <label for="tireWidth">
-                عرض تایر (میلیمتر)
-            </label>
-            <input type="number" id="tireWidth" placeholder="مثال: 205">
-        </div>
+    <div class="calculator-container">
+        <div class="container">
+            <div class="content">
+                <div class="form-group">
+                    <label for="tireWidth">
+                        عرض تایر (میلیمتر)
+                    </label>
+                    <input type="number" id="tireWidth" placeholder="مثال: 205">
+                </div>
 
-        <div class="form-group">
-            <label for="aspectRatio">
-                نسبت ارتفاع تایر (%)
-            </label>
-            <input type="number" id="aspectRatio" placeholder="مثال: 55">
-        </div>
+                <div class="form-group">
+                    <label for="aspectRatio">
+                        نسبت ارتفاع تایر (%)
+                    </label>
+                    <input type="number" id="aspectRatio" placeholder="مثال: 55">
+                </div>
 
-        <div class="form-group">
-            <label for="rimDiameter">
-                قطر رینگ (اینچ)
-            </label>
-            <input type="number" id="rimDiameter" placeholder="مثال: 16">
-        </div>
+                <div class="form-group">
+                    <label for="rimDiameter">
+                        قطر رینگ (اینچ)
+                    </label>
+                    <input type="number" id="rimDiameter" placeholder="مثال: 16">
+                </div>
 
-        <button onclick="calculateDimensions()">
-            <i class="fas fa-calculator" style="margin-left: 8px;"></i>
-            محاسبه
-        </button>
+                <button onclick="calculateDimensions()">
+                    <i class="fas fa-calculator" style="margin-left: 8px;"></i>
+                    محاسبه
+                </button>
 
-        <div id="result" class="result">
-            <div class="result-item">
-                <strong>ارتفاع دیواره تایر:</strong>
-                <span id="sidewallHeight"></span> میلیمتر
-            </div>
-            <div class="result-item">
-                <strong>قطر کلی تایر:</strong>
-                <span id="tyreDiameter"></span> میلیمتر
-            </div>
-            <div class="result-item">
-                <strong>محیط تایر:</strong>
-                <span id="tyreCircumference"></span> متر
+                <div id="result" class="result">
+                    <div class="result-item">
+                        <strong>ارتفاع دیواره تایر:</strong>
+                        <span id="sidewallHeight"></span> میلیمتر
+                    </div>
+                    <div class="result-item">
+                        <strong>قطر کلی تایر:</strong>
+                        <span id="tyreDiameter"></span> میلیمتر
+                    </div>
+                    <div class="result-item">
+                        <strong>محیط تایر:</strong>
+                        <span id="tyreCircumference"></span> متر
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <footer>
-        طراحی شده توسط تیم فنی سهند © ۱۴۰۲
+        <div class="footer-links">
+            <a href="services.html">خدمات ما</a>
+            <a href="pricing.html">خدمات ریمپ</a>
+            <a href="calculator.html">ماشین حساب</a>
+            <a href="contact.html">تماس با ما</a>
+        </div>
+
+        <div class="social-links">
+            <a href="https://www.instagram.com/remapsahand/"><i class="fab fa-instagram"></i></a>
+            <a href="https://t.me/pkhtami"><i class="fab fa-telegram"></i></a>
+            <a href="https://api.whatsapp.com/send/?phone=989308139944&text&app_absent=0"><i class="fab fa-whatsapp"></i></a>
+            <a href="tel:+989308139944"><i class="fa-solid fa-phone"></i></a>
+            <a href="https://www.google.com/maps?q=37.9286925311032,46.12345242158474"><i class="fa-solid fa-location-dot"></i></a>
+        </div>
+
+        <p>طراحی شده توسط تیم فنی سهند © ۱۴۰۲</p>
     </footer>
-</div>
 
-<script>
-    function calculateDimensions() {
-        // دریافت مقادیر از ورودی‌ها
-        const tireWidth = document.getElementById('tireWidth').value;
-        const aspectRatio = document.getElementById('aspectRatio').value;
-        const rimDiameter = document.getElementById('rimDiameter').value;
+    <script>
+        // اسکریپت برای منوی همبرگر
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
 
-        // اعتبارسنجی ورودی‌ها
-        if (!tireWidth || !aspectRatio || !rimDiameter) {
-            alert("لطفاً تمام مقادیر را وارد کنید");
-            return;
-        }
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
 
-        // محاسبات
-        const rimDiameterMm = parseFloat(rimDiameter) * 25.4;
-        const sidewallHeight = (parseFloat(tireWidth) * parseFloat(aspectRatio)) / 100.0;
-        const tyreDiameter = (sidewallHeight * 2) + rimDiameterMm;
-        const tyreCircumference = (Math.PI * tyreDiameter) / 1000;
-
-        // نمایش نتایج
-        document.getElementById('sidewallHeight').textContent = sidewallHeight.toFixed(2);
-        document.getElementById('tyreDiameter').textContent = tyreDiameter.toFixed(2);
-        document.getElementById('tyreCircumference').textContent = tyreCircumference.toFixed(3);
-
-        // نمایش بخش نتایج با انیمیشن
-        const resultDiv = document.getElementById('result');
-        resultDiv.style.display = 'block';
-        resultDiv.style.animation = 'none';
-        setTimeout(() => {
-            resultDiv.style.animation = 'fadeIn 0.5s ease forwards';
-        }, 10);
-    }
-
-    // امکان استفاده از کلید Enter برای محاسبه
-    document.querySelectorAll('input').forEach(input => {
-        input.addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
-                calculateDimensions();
+            if (navLinks.classList.contains('active')) {
+                document.body.style.overflow = 'hidden';
+            } else {
+                document.body.style.overflow = 'auto';
             }
         });
-    });
-</script>
+
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('active');
+                document.body.style.overflow = 'auto';
+            });
+        });
+
+        // اسکریپت ماشین حساب
+        function calculateDimensions() {
+            const tireWidth = document.getElementById('tireWidth').value;
+            const aspectRatio = document.getElementById('aspectRatio').value;
+            const rimDiameter = document.getElementById('rimDiameter').value;
+
+            if (!tireWidth || !aspectRatio || !rimDiameter) {
+                alert("لطفاً تمام مقادیر را وارد کنید");
+                return;
+            }
+
+            const rimDiameterMm = parseFloat(rimDiameter) * 25.4;
+            const sidewallHeight = (parseFloat(tireWidth) * parseFloat(aspectRatio)) / 100.0;
+            const tyreDiameter = (sidewallHeight * 2) + rimDiameterMm;
+            const tyreCircumference = (Math.PI * tyreDiameter) / 1000;
+
+            document.getElementById('sidewallHeight').textContent = sidewallHeight.toFixed(2);
+            document.getElementById('tyreDiameter').textContent = tyreDiameter.toFixed(2);
+            document.getElementById('tyreCircumference').textContent = tyreCircumference.toFixed(3);
+
+            const resultDiv = document.getElementById('result');
+            resultDiv.style.display = 'block';
+            resultDiv.style.animation = 'none';
+            setTimeout(() => {
+                resultDiv.style.animation = 'fadeIn 0.5s ease forwards';
+            }, 10);
+        }
+
+        document.querySelectorAll('input').forEach(input => {
+            input.addEventListener('keypress', function(e) {
+                if (e.key === 'Enter') {
+                    calculateDimensions();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
